<resources>
    <string name="app_name">Star Wars</string>
    <string name="planet_title">Planet</string>
    <string name="no_internet_connection">No internet available, please check your connected WIFi or Data</string>
    <string name="text_like">Like</string>
    <string name="text_population">Population: %1$s</string>
    <string name="text_climate">Climate: %1$s</string>
    <string name="text_rotation_period">Rotation period: %1$s</string>
    <string name="text_orbital_period">Orbital period: %1$s</string>
    <string name="text_gravity">Gravity: %1$s</string>
    <string name="text_surface_water">Surface water: %1$s</string>
    <string name="text_terrain">Terrain: %1$s</string>
    <string name="text_button_residents">Planet Residents</string>
    <string name="residents_title">Residents</string>
    <string name="description_zoom_touch_close">Touch to close zoom</string>
    <string name="description_zoom_touch">Touch to zoom</string>
    <string name="residents_detail_title">Resident Detail</string>
    <string name="text_resident_name">Name: %1$s</string>
    <string name="text_resident_gender">Gender: %1$s</string>
    <string name="text_resident_birth_year">Birth year: %1$s</string>
    <string name="text_resident_height">Height: %1$s</string>
    <string name="text_resident_mass">Mass: %1$s</string>
    <string name="text_resident_hair_color">Hair color: %1$s</string>
    <string name="text_resident_skin_color">Skin color: %1$s</string>
    <string name="text_resident_eye_color">Eye color: %1$s</string>

</resources>
